--- a/Website/IoT_EE3/IoT Website/index.html
+++ b/Website/IoT_EE3/IoT Website/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
   <head>
@@ -77,7 +77,7 @@
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">HealthPak is a tool for suppliers and consumers to accurately monitor the transport environment of sensitive goods.</p>
+            <p class="text-faded mb-5">HealthPak is an all-in-one solution to enable suppliers and consumers to accurately monitor the transport environment of sensitive goods. Our specific focus is the safe transport of medicines, organs and other health products which require strict environments for preservation.</p>
             <a class="btn btn-primary btn-xl portfolio-link" href="#portfolioModal2" data-toggle="modal">Why HealthPak?</a>
           </div>
         </div>
@@ -90,7 +90,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">We've got what you need!</h2>
             <hr class="light my-4">
-            <p class="text-faded2 mb-4">By continoulsy measuring ambient conditions using a collection of sensors, our complete cooling box monitoring device shares data online, allowing the user to easily access this information at any given time and warning them if anything goes wrong.</p>
+            <p class="text-faded2 mb-4">HealthPak is versatile, bespoke enclosure that measures vibration, humidity, ambient temperature and surface temperature. HealthPak communicates data online, allowing the user to access real-time information on the contents of the enclosure at any time and warning them when and what has gone wrong or if the environment is as nominal.</p>
             <a class="btn btn-light btn-xl portfolio-link" href="#portfolioModal1" data-toggle="modal">More details</a>
           </div>
         </div>
@@ -112,28 +112,28 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-thermometer text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Temperature</h3>
-              <p class="text-muted mb-0">Ambient and surface temperature sensors combined with a humidity sensor ensures perfect transport conditions.</p>
+              <p class="text-muted mb-0">Ambient and surface temperature sensors combined with a humidity sensor ensures precise monitoring to enable perfect transport conditions.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-dashboard text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Vibrations</h3>
-              <p class="text-muted mb-0">An accelerometer tracks the vibrations of the goods, allowing the device to send out a warning when certain limits are exceeded.</p>
+              <p class="text-muted mb-0">An accelerometer tracks the vibrations of the goods in all directions, allowing the HealthPak to send out a warning when certain limits are exceeded.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-newspaper-o text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Up to Date</h3>
-              <p class="text-muted mb-0">Frequent measurements provide accurate and updated results.</p>
+              <p class="text-muted mb-0">Continuous real-time measurements provide accurate and updated readings from all sensors.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-battery-4 text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Low power</h3>
-              <p class="text-muted mb-0">Our robust design has very low power consumption. No need to worry about batteries.</p>
+              <p class="text-muted mb-0">Our robust design has very low power consumption. No need to worry about batteries depleting on long haul deliveries.</p>
             </div>
           </div>
         </div>
@@ -425,10 +425,10 @@
                         <div class="col-lg-8 offset-lg-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Motivation</h2>
+                                <h2>Our Motivation...</h2>
                                 <p class="item-intro text-muted">Why is HealthPak needed?</p>
                                 <img class="img-fluid d-block mx-auto" src="img/HealthPakLogoCut.png" alt="">
-                                <p>With the technological advances in goods shipment and delivery, we are now able to track the location of our purchases at any given time. In the case of sensitive goods that are stored in refrigerators such as medicine, organs or even some foods, however, the manufacturer, retailer or consumer might be interested in the conditions in which these goods were stored during transportation. Vaccines or organs, for instance, require an ambient temperature of 2 to 8ºC. If the cooling box's temperature is outside these bounds, the vaccine loses effectiveness. This can cause the consumer to lose trust in the product and cost a lot of money to the manufacturer. CoolBox measures this data and makes it available for anyone involved with the shipped goods enhancing customer relationships, allowing retailers to discard any wrongly stored goods and providing intel to manufacturers on any reoccurring storage problems.</p>
+                                <p>With vast technological advances in goods shipment and delivery, we are now able to track the location of our purchases at any given time. In the case of sensitive goods that are stored in refrigerators such as medicine, organs or even some foods, however, the manufacturer, retailer or consumer might be interested in the conditions in which these goods were stored during transportation. Vaccines or organs, for instance, require an ambient temperature of 2 to 8ºC. If the cooling box's temperature is outside these bounds, the vaccine loses effectiveness. This can cause the consumer to lose trust in the product, cost a lot of money for the manufacturer and may be detrimental for a consumer whose life is heavily reliant on medicines or a transplant. HealthPak measures this data and makes it available for anyone involved with the shipped goods enhancing customer relationships, allowing retailers to discard any wrongly stored goods and providing intel to manufacturers on any reoccurring storage problems.</p>
                                 <div class="row no-gutters popup-gallery">
                                   <div class="col-lg-6 col-sm-6">
                                     <p><h3>Current Alternatives</h3></p>
