--- a/Website/IoT_EE3/IoT Website/index.html
+++ b/Website/IoT_EE3/IoT Website/index.html
@@ -383,7 +383,9 @@
                                 <img class="img-fluid d-block mx-auto" src="img/sys_diag.jpg" alt="">
                                 <h2>General information</h2>
                                 <p>HealthPak uses 3 different sensors to continuously measure the temperature, humidity and vibrations inside of the smart cooling box. The sensors communicate with a WiFi chip in order to transmit the data they have collected to a Broker using Message Queuing Telemetry Transport (MQTT) communication. Any device that requires data from the sensors can subscribe to that Broker through a certain channel making it available to any online interface. As well as our website and potential App, we also have a User Interface consisting of a Light Emitting Diode and a Buzzer subscribing to the Broker through its own WiFi chip. This UI provides an easier and quicker way to monitor HealthPak's parameters as it changes color and makes sound when anything goes wrong.</p>
-                                <h2>Technical specifications</h2>
+                                <h2> Looking to the Future...</h2>
+				<p>We currently have </p>
+				<h2>Technical specifications</h2>
                                 <p>
                                   <h3>ESP8266</h3>
                                 </p>
@@ -429,13 +431,14 @@
                                 <p class="item-intro text-muted">Why is HealthPak needed?</p>
                                 <img class="img-fluid d-block mx-auto" src="img/HealthPakLogoCut.png" alt="">
                                 <p>With vast technological advances in goods shipment and delivery, we are now able to track the location of our purchases at any given time. In the case of sensitive goods that are stored in refrigerators such as medicine, organs or even some foods, however, the manufacturer, retailer or consumer might be interested in the conditions in which these goods were stored during transportation. Vaccines or organs, for instance, require an ambient temperature of 2 to 8ºC. If the cooling box's temperature is outside these bounds, the vaccine loses effectiveness. This can cause the consumer to lose trust in the product, cost a lot of money for the manufacturer and may be detrimental for a consumer whose life is heavily reliant on medicines or a transplant. HealthPak measures this data and makes it available for anyone involved with the shipped goods enhancing customer relationships, allowing retailers to discard any wrongly stored goods and providing intel to manufacturers on any reoccurring storage problems.</p>
+				<p>There are currently over 4 million people in the UK living with Diabetes, along with 60,000 IVF treatments taking place every year. In the US, 21 million blood components are transfused each year. Many of the treatments for illnesses, genetic defeciencies and diseases require specific and strict storage and transportation. Current technology is very basic in this field and more advanced designs are extremely expensive and cannot be bought on mass. This is where HealthPak fits in, to fill the gap in this market.</p>
                                 <div class="row no-gutters popup-gallery">
                                   <div class="col-lg-6 col-sm-6">
                                     <p><h3>Current Alternatives</h3></p>
                                     <ul style="list-style-type:none">
                                       <li><span style="color : red;">✗</span> For Organs - Only a fraction of succesful organ transplants due to picnic-cooler method transportation. Max 4h of preservation.</li>
-                                      <li><span style="color : red;">✗</span> For IVF - numerous companies, such as IVFcouriers and KYNISI, offer transport but absolutely no updates on ambient conditions or monitoring services.</li>
-                                      <li><span style="color : red;">✗</span> For Vaccines - Literally use an outdated paper tracking-sheet.</li>
+                                      <li><span style="color : red;">✗</span> For IVF - numerous companies, such as IVFcouriers and KYNISI, offer transport but give absolutely no updates on ambient conditions or monitoring services.</li>
+                                      <li><span style="color : red;">✗</span> For Vaccines - Still use an outdated paper tracking-sheet.</li>
                                     </ul>
                                   </div>
                                   <div class="col-lg-6 col-sm-6">
@@ -444,7 +447,7 @@
                                       <li><span style="color : green;">✓</span> Precise real-time monitoring of temperature and humidity.</li>
                                       <li><span style="color : green;">✓</span> Accelerometer sensor used to track potential damage to item being transported.</li>
                                       <li><span style="color : green;">✓</span> Interactive and easy-to-use UI with audio-visual feedback.</li>
-                                      <li><span style="color : green;">✓</span> Complete and transparent logging of transport history.</li>
+                                      <li><span style="color : green;">✓</span> Complete and transparent logging of entire transport history.</li>
                                     </ul>
                                   </div>
                                   <div class="col-lg-6 col-sm-6">
@@ -454,9 +457,11 @@
                                   <div class="col-lg-6 col-sm-6">
                                       <p><h3>The Market</h3></p>
                                       <ul style="list-style-type:none">
-                                      <li>Closest alternative costs £320 but offers no live tracking</li><br>
-                                      <li>No singlular product that monitors humidity, temperature and accelerometer in feedback loop</li><br>
-                                      <li>Total manufacturing cost: £48.20. Our selling price: £100</li></ul>
+                                      <li>Closest alternative costs £320 but offers no live tracking or output feedback mechanism</li><br>
+                                      <li>No singlular product that monitors humidity, temperature and vibrations in a closed feedback system</li><br>
+				      <li>First to market opportunity, as drone technology advances supplimented by UK government funding , we can harness this technology to offer a fast, low-cost, sensitive goods delivery service of our own one day.</li><br>
+                                      <li>Total manufacturing cost: £48.20</li><br>
+				      <li>Our selling price: £100</li></ul>
                                   </div>
                                 </div>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Return to main page</button>
