--- a/Website/IoT_EE3/IoT Website/index.html
+++ b/Website/IoT_EE3/IoT Website/index.html
@@ -402,6 +402,14 @@
                                     <h3>LIS3DH</h3>
                                 </p>
                                 <p>The LIS3DH is an accelerometer. Since some goods are fragile or sensitive to sudden movements, our design contains a sensor capable of measuring acceleration.</p>
+				<p>
+                                    <h3>SSD1306</h3>
+                                </p>
+                                <p>The SSD1306 is an OLED display which provides a simple, yet elegant UI display</p>
+				<p>
+                                    <h3>Extra Inputs/Outputs</h3>
+                                </p>
+                                <p>3 input buttons for OLED display control, extra Adafruit Huzzah Feather to act as a recieving device, 2 ouput RGB LED'S, 1 output Piezo Buzer, 1 30,000mAH battery.</p>
                                 <img class="img-fluid d-block mx-auto" src="img/HealthPak.jpg" alt="">
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Return to main page</button>
                             </div>
