--- a/Website/IoT_EE3/IoT Website/index.html
+++ b/Website/IoT_EE3/IoT Website/index.html
@@ -409,7 +409,7 @@
 				<p>
                                     <h3>Extra Inputs/Outputs</h3>
                                 </p>
-                                <p>3 input buttons for OLED display control, extra Adafruit Huzzah Feather to act as a recieving device, 2 ouput RGB LED'S, 1 output Piezo Buzer, 1 30,000mAH battery.</p>
+                                <p>3 input buttons for OLED display control, extra Adafruit Huzzah Feather to act as a recieving device, 2 ouput RGB LED'S, 1 output Piezo Buzer, 1 30,000mAh battery.</p>
                                 <img class="img-fluid d-block mx-auto" src="img/HealthPak.jpg" alt="">
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Return to main page</button>
                             </div>
