--- a/Website/IoT_EE3/IoT Website/index.html
+++ b/Website/IoT_EE3/IoT Website/index.html
@@ -90,7 +90,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">We've got what you need!</h2>
             <hr class="light my-4">
-            <p class="text-faded2 mb-4">HealthPak is versatile, bespoke enclosure that measures vibration, humidity, ambient temperature and surface temperature. HealthPak communicates data online, allowing the user to access real-time information on the contents of the enclosure at any time and warning them when and what has gone wrong or if the environment is as nominal.</p>
+            <p class="text-faded2 mb-4">HealthPak is versatile, bespoke enclosure that measures vibration, humidity, ambient temperature and surface temperature. HealthPak communicates data online, allowing the user to access real-time information on the contents of the enclosure at any time and warning them when and what has gone wrong or if the environment is nominal.</p>
             <a class="btn btn-light btn-xl portfolio-link" href="#portfolioModal1" data-toggle="modal">More details</a>
           </div>
         </div>
